Delay and Synthesis Reports

--- a/Assignments/Assign 3/Carry_Look_Ahead_Adder/CLA_16_bit_ripple_envsettings.html
+++ b/Assignments/Assign 3/Carry_Look_Ahead_Adder/CLA_16_bit_ripple_envsettings.html
@@ -77,13 +77,13 @@
 <tr>
 <td>-ifn</td>
 <td>&nbsp;</td>
-<td>CLA_16_bit_ripple.prj</td>
+<td>CLA_16_bit_LCU.prj</td>
 <td>&nbsp;</td>
 </tr>
 <tr>
 <td>-ofn</td>
 <td>&nbsp;</td>
-<td>CLA_16_bit_ripple</td>
+<td>CLA_16_bit_LCU</td>
 <td>&nbsp;</td>
 </tr>
 <tr>
@@ -101,7 +101,7 @@
 <tr>
 <td>-top</td>
 <td>&nbsp;</td>
-<td>CLA_16_bit_ripple</td>
+<td>CLA_16_bit_LCU</td>
 <td>&nbsp;</td>
 </tr>
 <tr>
@@ -131,7 +131,7 @@
 <tr>
 <td>-keep_hierarchy</td>
 <td>Keep Hierarchy</td>
-<td>No</td>
+<td>Yes</td>
 <td>No</td>
 </tr>
 <tr>
