Some reports update

--- a/Assignments/Assign 3/Carry_Look_Ahead_Adder/CLA_16_bit_ripple_summary.html
+++ b/Assignments/Assign 3/Carry_Look_Ahead_Adder/CLA_16_bit_ripple_summary.html
@@ -2,7 +2,7 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>CLA_16_bit_LCU Project Status (08/31/2022 - 11:16:16)</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>CLA_16_bit_LCU Project Status (08/31/2022 - 12:44:57)</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>Carry_Look_Ahead_Adder.xise</TD>
@@ -11,7 +11,7 @@
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Module Name:</B></TD>
-<TD>CLA_16_bit_LCU</TD>
+<TD>CLA_4_bit_augmented</TD>
 <TD BGCOLOR='#FFFF99'><B>Implementation State:</B></TD>
 <TD>Synthesized</TD>
 </TR>
@@ -41,10 +41,7 @@
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Environment:</B></dif></TD>
-<TD>
-<A HREF_DISABLED='D:/KGP Semesters/SEM 5/COA LAB/COA-Lab-22/Assignments/Assign 3/Carry_Look_Ahead_Adder\CLA_16_bit_ripple_envsettings.html'>
-System Settings</A>
-</TD>
+<TD>&nbsp;</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Final Timing Score:</B></LI></UL></TD>
 <TD>&nbsp;&nbsp;</TD>
 </TR>
@@ -98,5 +95,5 @@ System Settings</A>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 08/31/2022 - 12:14:53</center>
+<br><center><b>Date Generated:</b> 08/31/2022 - 12:44:57</center>
 </BODY></HTML>
