--- a/Assignments/Assign 3/Carry_Look_Ahead_Adder/Wrapper_CLA_16_bit_ripple_envsettings.html
+++ b/Assignments/Assign 3/Carry_Look_Ahead_Adder/Wrapper_CLA_16_bit_ripple_envsettings.html
@@ -77,13 +77,13 @@
 <tr>
 <td>-ifn</td>
 <td>&nbsp;</td>
-<td>Wrapper_CLA_16_bit_LCU.prj</td>
+<td>Wrapper_CLA_16_bit_ripple.prj</td>
 <td>&nbsp;</td>
 </tr>
 <tr>
 <td>-ofn</td>
 <td>&nbsp;</td>
-<td>Wrapper_CLA_16_bit_LCU</td>
+<td>Wrapper_CLA_16_bit_ripple</td>
 <td>&nbsp;</td>
 </tr>
 <tr>
@@ -101,7 +101,7 @@
 <tr>
 <td>-top</td>
 <td>&nbsp;</td>
-<td>Wrapper_CLA_16_bit_LCU</td>
+<td>Wrapper_CLA_16_bit_ripple</td>
 <td>&nbsp;</td>
 </tr>
 <tr>
@@ -380,6 +380,12 @@
 <td>xc7a100t-csg324-1</td>
 <td>None</td>
 </tr>
+<tr>
+<td>-uc</td>
+<td>&nbsp;</td>
+<td>timing.ucf</td>
+<td>None</td>
+</tr>
 </TABLE>
 <A NAME="Map Property Settings"></A>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
@@ -437,7 +443,7 @@
 <tr>
 <td>-o</td>
 <td>&nbsp;</td>
-<td>Wrapper_CLA_16_bit_LCU_map.ncd</td>
+<td>Wrapper_CLA_16_bit_ripple_map.ncd</td>
 <td>None</td>
 </tr>
 <tr>
