--- a/Assignments/Assign 5/binary_counter/clock_divider_envsettings.html
+++ b/Assignments/Assign 5/binary_counter/clock_divider_envsettings.html
@@ -70,13 +70,13 @@
 <tr>
 <td>-ifn</td>
 <td>&nbsp;</td>
-<td>counter.prj</td>
+<td>clock_divider.prj</td>
 <td>&nbsp;</td>
 </tr>
 <tr>
 <td>-ofn</td>
 <td>&nbsp;</td>
-<td>counter</td>
+<td>clock_divider</td>
 <td>&nbsp;</td>
 </tr>
 <tr>
@@ -94,7 +94,7 @@
 <tr>
 <td>-top</td>
 <td>&nbsp;</td>
-<td>counter</td>
+<td>clock_divider</td>
 <td>&nbsp;</td>
 </tr>
 <tr>
