--- a/Assignments/Assign 5/binary_counter/counter_structural_summary.html
+++ b/Assignments/Assign 5/binary_counter/counter_structural_summary.html
@@ -445,10 +445,10 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
 <TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/KGP Semesters/SEM 5/COA LAB/COA-Lab-22/Assignments/Assign 5/binary_counter\isim.log'>ISIM Simulator Log</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Wed 14. Sep 15:32:36 2022</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/KGP Semesters/SEM 5/COA LAB/COA-Lab-22/Assignments/Assign 5/binary_counter\usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Wed 14. Sep 16:19:58 2022</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/KGP Semesters/SEM 5/COA LAB/COA-Lab-22/Assignments/Assign 5/binary_counter\webtalk.log'>WebTalk Log File</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Wed 14. Sep 16:20:08 2022</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/KGP Semesters/SEM 5/COA LAB/COA-Lab-22/Assignments/Assign 5/binary_counter\usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Current</TD><TD COLSPAN='2'>Wed 14. Sep 16:19:58 2022</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/KGP Semesters/SEM 5/COA LAB/COA-Lab-22/Assignments/Assign 5/binary_counter\webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>Wed 14. Sep 16:20:08 2022</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 09/14/2022 - 16:31:20</center>
+<br><center><b>Date Generated:</b> 10/20/2022 - 15:29:00</center>
 </BODY></HTML>
